RFA_MilestoneRM01/src/objects/Project_Application_RFA__c.object
<CustomObject>
    <fields>
        <fullName>SecondCOASubCategory2__c</fullName>
        <label>Second COA Sub Category 2</label>
        <picklist>
            <controllingField>SecondCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory3__c</fullName>
        <label>Second COA Sub Category 3</label>
        <picklist>
            <controllingField>SecondCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location, Extension of existing location or Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory__c</fullName>
        <label>Second COA Sub Category 1</label>
        <picklist>
            <controllingField>SecondCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Discussion__c</fullName>
        <label>Sponsor(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Milestone__c</fullName>
        <label>Start Date(Milestone)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member_Discussion__c</fullName>
        <label>Team Member(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ThirdCOACategory__c</fullName>
        <label>Third COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThirdCOASubCategory2__c</fullName>
        <label>Third COA Sub Category 2</label>
        <picklist>
            <controllingField>ThirdCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThirdCOASubCategory3__c</fullName>
        <label>Third COA Sub Category 3</label>
        <picklist>
            <controllingField>ThirdCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location, Extension of existing location or Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThirdCOASubCategory__c</fullName>
        <label>Third COA Sub Category 1</label>
        <picklist>
            <controllingField>ThirdCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_be_funded_by_L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To be funded by (L2 functions):</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L2fundedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <label>Update Date(Milestone)</label>
        <type>Date</type>
    </fields>
    <label>Project &amp; CI申請</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>プロジェクト申請RFA名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Project_Charter</fullName>
        <active>true</active>
        <label>Project  Charter(Capex)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Charter_Non_Capex</fullName>
        <active>true</active>
        <label>Project  Charter(Non Capex)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Close_Out</fullName>
        <active>true</active>
        <label>Project Close-Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Initiate</fullName>
        <active>true</active>
        <label>Project  Initiate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Initiate_Capital</fullName>
        <active>true</active>
        <label>Project Initiate（Capital）</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Initiate_NonProject</fullName>
        <active>true</active>
        <label>Project Initiate（NonProject）</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>